fix(LOC-1905): live link popups should no longer be cut off at the edge of the site information area of a window.

--- a/src/styles/containers/SiteInfo.scss
+++ b/src/styles/containers/SiteInfo.scss
@@ -6,7 +6,7 @@
 		display: flex;
 		flex-direction: column;
 		position: relative;
-		overflow: hidden;
+		width: 0;
 	}
 
 	.DownloaderOverlay {
